--- a/myecommerce/templates/ecommerce/index.html
+++ b/myecommerce/templates/ecommerce/index.html
@@ -31,7 +31,7 @@
         </nav>
     <div class="row">
         <div class="col-2">
-            <h1>SHOP SMARTER!<br>LIVE BETTER!</h1>
+            <h1>SHOP SMARTER!!<br>LIVE BETTER!</h1>
             <P>COMING SOON!!!!!!!!</P>
             <a href="" class="btn">Explore Now &#8594</a>
         </div>
