--- a/myecommerce/templates/ecommerce/cart.html
+++ b/myecommerce/templates/ecommerce/cart.html
@@ -1,3 +1,5 @@
-{% load static%}
-
-<h3>cart</h3>
+{% extends 'store/main.html' %}
+{% load static %}
+{% block content %}
+     <h3>cart</h3>
+{% endblock content %}
