--- a/myecommerce/templates/ecommerce/checkout.html
+++ b/myecommerce/templates/ecommerce/checkout.html
@@ -1,4 +1,4 @@
-{% extends 'store/main.html' %}
+{% extends 'ecommerce/main.html' %}
 {% load static %}
 {% block content %}
      <h3>Checkout</h3>
