changed checkout to store

--- a/myecommerce/templates/ecommerce/store.html
+++ b/myecommerce/templates/ecommerce/store.html
@@ -1,5 +1,5 @@
 {% extends 'ecommerce/main.html' %}
 {% load static %}
 {% block content %}
-     <h3>checkout</h3>
+     <h3>Store</h3>
 {% endblock content %}
