--- a/myecommerce/templates/ecommerce/login.html
+++ b/myecommerce/templates/ecommerce/login.html
@@ -1,13 +1,15 @@
-<!doctype html>
+{% load static %}
+<!Doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
-  <body>
-    <form>
+  <body class="body-liz">
+    <form method="POST" action="">
         <div class="mb-3">
           <label for="exampleInputName1" class="form-label">Username</label>
           <input type="text" class="form-control" id="exampleInputName1" aria-describedby="nameHelp">
