--- a/myecommerce/templates/ecommerce/login.html
+++ b/myecommerce/templates/ecommerce/login.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
-  <body class="body-liz">
+  <body style="background-color:">
     <form method="POST" action="">
         <div class="mb-3">
           <label for="exampleInputName1" class="form-label">Username</label>
@@ -18,7 +18,9 @@
           <label for="exampleInputPassword1" class="form-label">Password</label>
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Sign in</button>
+  </div>
+</form>
       </form>
   </body>
 </html>
