--- a/myecommerce/templates/ecommerce/registration.html
+++ b/myecommerce/templates/ecommerce/registration.html
@@ -14,11 +14,6 @@
       </div><br><br>
       <form>
         <div class="row mb-3">
-          <label for="input Name" class="col-sm-2 col-form-label">Name</label>
-          <div class="col-sm-4.8">
-            <input type="text" class="form-control" id="inputName3">
-          </div><BR></BR>
-        <div class="row mb-3">
           <label for="inputBusiness Name3" class="col-sm-2 col-form-label">Business Name</label>
           <div class="col-sm-5">
             <input type="text" class="form-control" id="inputBusinessName3">
@@ -26,17 +21,24 @@
         </div><br><br>
         <form>
           <div class="row mb-3">
-            <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+            <label for="ContactNumber3" class="col-sm-2 col-form-label">Contact Number</label>
             <div class="col-sm-5">
-              <input type="email" class="form-control" id="inputEmail3">
-            </div>
-          </div><br><br>
-          <div class="row mb-3">
-            <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-            <div class="col-sm-5">
-              <input type="password" class="form-control" id="inputPassword3">
-            </div>
-          </div>
+              <input type="text" class="form-control" id="inputContactNumber3">
+            </div><br><br><br><br>
+            <form class="row g-3">
+              <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">Email</label>
+                <input type="email" class="form-control" id="inputEmail4">
+              </div>
+              <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">Password</label>
+                <input type="password" class="form-control" id="inputPassword4">
+              </div><br><br><br><br><br>
+              <div class="col-12">
+                <label for="inputAddress" class="form-label">Address</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="Address">
+              </div>
+            
 
 
   </body>
