--- a/myecommerce/templates/ecommerce/login.html
+++ b/myecommerce/templates/ecommerce/login.html
@@ -11,8 +11,8 @@
   <body style="background-color:">
     <form method="POST" action="">
         <div class="mb-3">
-          <label for="exampleInputName1" class="form-label">Username</label>
-          <input type="text" class="form-control" id="exampleInputName1" aria-describedby="nameHelp">
+          <label for="exampleInputEmail1" class="form-label">Email-address</label>
+          <input type="email" class="form-control" id="exampleInputemail1" aria-describedby="emailHelp">
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
