--- a/myecommerce/templates/ecommerce/login.html
+++ b/myecommerce/templates/ecommerce/login.html
@@ -10,19 +10,23 @@
   </head>
   <body style="background-color:">
     <form method="POST" action="">
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email-address</label>
-          <input type="email" class="form-control" id="exampleInputemail1" aria-describedby="emailHelp">
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <button type="submit" class="btn btn-primary">Sign in</button>
+      
+    </form>
+    <div class="container">
+      <div class="row d-flex justify-content-center">
+    <div class="column g-3">
+      <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+      <div class="col-sm-5">
+        <input type="email" class="form-control" placeholder="Enter your Email" aria-label="Email">
+      </div><br><br>
+      <div class="col-sm-5">
+        <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+        <input type="text" class="form-control" placeholder="Enter your Password" aria-label="Password">
+      </div><br><br>
+        <button type="sign in" class="btn btn-primary">Sign in</button>
   </div>
 </form>
       </form>
   </body>
 </html>
 <form>
-    
