--- a/myecommerce/templates/ecommerce/registration.html
+++ b/myecommerce/templates/ecommerce/registration.html
@@ -13,29 +13,45 @@
       
       </div><br><br>
       <form>
-        <div class="row mb-3">
-          <label for="inputBusiness Name3" class="col-sm-2 col-form-label">Business Name</label>
+        <div class="container">
+          <div class="row d-flex justify-content-center">
+        <div class="col-12">
+          <label for="inputAddress" class="form-label">First Name</label>
           <div class="col-sm-5">
-            <input type="text" class="form-control" id="inputBusinessName3">
-          </div>
+          <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
         </div><br><br>
-        <form>
-          <div class="row mb-3">
-            <label for="ContactNumber3" class="col-sm-2 col-form-label">Contact Number</label>
-            <div class="col-sm-5">
-              <input type="text" class="form-control" id="inputContactNumber3">
-            </div><br><br><br><br>
-            <form class="row g-3">
-              <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Email</label>
-                <input type="email" class="form-control" id="inputEmail4">
-              </div>
-              <div class="col-md-6">
-                <label for="inputPassword4" class="form-label">Password</label>
-                <input type="password" class="form-control" id="inputPassword4">
-              </div><br><br><br><br><br>
+        <div class="col-12">
+          <label for="inputAddress" class="form-label">Last Name</label>
+          <div class="col-sm-5">
+          <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
+        </div><br><br>
+        <div class="col-12">
+          <label for="inputAddress" class="form-label">Business Name</label>
+          <div class="col-sm-5">
+          <input type="text" class="form-control" id="inputBusinessName" placeholder="Business Name">
+        </div><br><br>
+        <div class="col-auto">
+          <label for="inputAddress" class="form-label">Business Type</label>
+          <div class="col-sm-5">
+          <label class="visually-hidden" for="autoSizingSelect">Preference</label>
+          <select class="form-select" id="autoSizingSelect">
+            <option selected></option>
+            <option value="1">Clothes</option>
+            <option value="2">Shoes</option>
+            <option value="3">Mobile Phones</option>
+            <option value="2">Kitchen Appliances</option>
+            <option value="3">Hair Accessories</option>
+          </select>
+        </div><br><br>
+       <div class="col-12">
+          <label for="inputAddress" class="form-label">Email</label>
+          <div class="col-sm-5">
+          <input type="email" class="form-control" id="inputemail" placeholder="Email">
+        </div><br><br>
+
               <div class="col-12">
                 <label for="inputAddress" class="form-label">Address</label>
+                <div class="col-sm-5">
                 <input type="text" class="form-control" id="inputAddress" placeholder="Address">
               </div>
             
