--- a/myecommerce/templates/ecommerce/login.html
+++ b/myecommerce/templates/ecommerce/login.html
@@ -8,19 +8,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
-  <body style="background-color:">
-    <form method="POST" action="">
-      
+  <body style="background-color: rgba(255, 187, 0, 0.973);">
+    <form method="POST" action=""></form>
+    <h1>Log In</h1>
+    </div><br><br>
+
     </form>
     <div class="container">
       <div class="row d-flex justify-content-center">
     <div class="column g-3">
-      <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+      <label for="inputEmail" class="col-sm-2 col-form-label" style="color: darkgreen;"><b>Email</b></label>
       <div class="col-sm-5">
         <input type="email" class="form-control" placeholder="Enter your Email" aria-label="Email">
       </div><br><br>
       <div class="col-sm-5">
-        <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+        <label for="inputPassword3" class="col-sm-2 col-form-label" style="color: darkgreen;"><b>Password</b></label>
         <input type="text" class="form-control" placeholder="Enter your Password" aria-label="Password">
       </div><br><br>
         <button type="sign in" class="btn btn-primary">Sign in</button>
