--- a/myecommerce/templates/ecommerce/registration.html
+++ b/myecommerce/templates/ecommerce/registration.html
@@ -8,30 +8,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
-  <body style="background-color:">
-    <form method="POST" action="">
-      
-      </div><br><br>
+  <body style="background-color: rgba(255, 187, 0, 0.973);">
+    <form method="POST" action=""></form>
+    <h1>Registration</h1>
+    </div><br><br>
       <form>
         <div class="container">
           <div class="row d-flex justify-content-center">
         <div class="col-12">
-          <label for="inputAddress" class="form-label">First Name</label>
+          <label for="inputAddress" class="form-label" style="color: darkgreen;"><b>First Name</b></label>
           <div class="col-sm-5">
           <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
         </div><br><br>
         <div class="col-12">
-          <label for="inputAddress" class="form-label">Last Name</label>
+          <label for="inputAddress" class="form-label"style="color: darkgreen;"><b>Last Name</b></label>
           <div class="col-sm-5">
           <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
         </div><br><br>
         <div class="col-12">
-          <label for="inputAddress" class="form-label">Business Name</label>
+          <label for="inputAddress" class="form-label"style="color: darkgreen;"><b>Business Name</b></label>
           <div class="col-sm-5">
           <input type="text" class="form-control" id="inputBusinessName" placeholder="Business Name">
         </div><br><br>
         <div class="col-auto">
-          <label for="inputAddress" class="form-label">Business Type</label>
+          <label for="inputAddress" class="form-label"style="color: darkgreen;"><b>Business Type</b></label>
           <div class="col-sm-5">
           <label class="visually-hidden" for="autoSizingSelect">Preference</label>
           <select class="form-select" id="autoSizingSelect">
@@ -44,13 +44,13 @@
           </select>
         </div><br><br>
        <div class="col-12">
-          <label for="inputAddress" class="form-label">Email</label>
+          <label for="inputAddress" class="form-label"style="color: darkgreen;"><b>Email</b></label>
           <div class="col-sm-5">
           <input type="email" class="form-control" id="inputemail" placeholder="Email">
         </div><br><br>
 
               <div class="col-12">
-                <label for="inputAddress" class="form-label">Address</label>
+                <label for="inputAddress" class="form-label"style="color: darkgreen;"><b>Address</b></label>
                 <div class="col-sm-5">
                 <input type="text" class="form-control" id="inputAddress" placeholder="Address">
               </div>
