--- a/myecommerce/templates/ecommerce/registration.html
+++ b/myecommerce/templates/ecommerce/registration.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
   <body style="background-color: rgba(255, 187, 0, 0.973);">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <h2 class="text-center mb-4"><b>Registration</b></h2>
     <form method="POST" action=""></form>
-    <h1>Registration</h1>
-    </div><br><br>
-      <form>
         <div class="container">
           <div class="row d-flex justify-content-center">
         <div class="col-12">
