--- a/myecommerce/templates/ecommerce/registration.html
+++ b/myecommerce/templates/ecommerce/registration.html
@@ -55,7 +55,11 @@
                 <div class="col-sm-5">
                 <input type="text" class="form-control" id="inputAddress" placeholder="Address">
               </div>
-            
+              <div>
+                <label for="profilepic" class="form-label"style="color: darkgreen;"><b>Profile Picture</b></label>
+                <div class="col-sm-5">
+                <input type="file" class="form-control" id="profilepic" placeholder="profilepic">
+              </div>
 
 
   </body>
