--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -44,5 +44,10 @@
           
         </div>
       </nav>
+      <section>
+        {% block content %}
+
+        {% end block content}
+      </section>
 </body>
 </html>
