changes to main

--- a/myecommerce/templates/ecommerce/store.html
+++ b/myecommerce/templates/ecommerce/store.html
@@ -1,24 +1,5 @@
-{% extends "store/index.html%}
-{% load static%}
-{%block content%}
-
-<div class="row">
-	<div class="col-lg-4">
-		<div class="box-element product">
-
-		</div>
-	</div>
-
-	<div class="col-lg-4">
-		<div class="box-element product">
-			
-		</div>
-	</div>
-
-	<div class="col-lg-4">
-		<div class="box-element product">
-
-		</div>
-	</div>
-</div>
-{%endblock content%}
+{% extends 'ecommerce/main.html' %}
+{% load static %}
+{% block content %}
+     <h3>Store</h3>
+{% endblock content %}
