--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -59,6 +59,26 @@
         {% end block content}
       </section>
 
+      <section class="footer-1">
+        <div class="container1">
+            <div class="contacts">
+              <h2>Contact Us</h2>
+              <p>Email: example@email.com</p>
+              <p>Phone: +256 783 508210</p>
+              <p>Address: Kikoni, Kampala, Uganda</p>
+            </div>
+            <div class="social-media">
+              <h2>Follow Us</h2>
+              <ul>
+                <li><a href="#"><img src="{% static 'images/Facebook-icon.webp' %}" alt="Facebook"></a></li>
+                <li><a href="#"><img src="{% static 'images/x_logo.png' %}" alt="X"></a></li>
+                <li><a href="#"><img src="{% static 'images/Instagram.png' %}" alt="Instagram"></a></li>
+                <li><a href="#"><img src="{% static 'images/LinkedIn_icon.png' %}" alt="LinkedIn"></a></li>
+              </ul>
+            </div>
+        </div>
+    </section>
+
       <footer>   
         <div class="footer-content">
             <p>&copy; 2024 Ecom Store. All Rights Reserved.</p>
