included building address to checkout

--- a/myecommerce/templates/ecommerce/checkout.html
+++ b/myecommerce/templates/ecommerce/checkout.html
@@ -22,7 +22,7 @@
                     
                     <div id="shipping-info">
                          <hr>
-                         <p>Shipping Information:</p>
+                         <p>Address Information:</p>
                          <hr>
                          <div class="form-field">
                               <input class="form-control" type="text" name="address" placeholder="Address..">
@@ -34,7 +34,7 @@
                               <input class="form-control" type="text" name="state" placeholder="State..">
                          </div>
                          <div class="form-field">
-                              <input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
+                              <input class="form-control" type="text" name="Building" placeholder="Building..">
                          </div>
                     </div>
                     <hr>
