--- a/myecommerce/templates/ecommerce/store.html
+++ b/myecommerce/templates/ecommerce/store.html
@@ -10,13 +10,14 @@
 	    <div class="box-element product">
 		        <h6><strong>{{product.name}}</strong></h6>
 		        <hr>
-
-		        <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
+				<a data-product="{{product.id}}" data-action = "add" class="btn btn-outline-success add-btn update-cart" href="#">Add to Cart</a>
+		        
 		        <a class="btn btn-outline-success" href="#">View</a>
-		        <h4 style="display: inline-block; float: right"><strong>${{product.price|floatformat}}</strong></h4>
+		        <h4 style="display: inline-block; float:right"><strong>${{product.price|floatformat}}</strong></h4>
 
 	    </div>
     </div>
     {% endfor %}
 </div>
+
 {% endblock content %}
