--- a/myecommerce/templates/ecommerce/signup.html
+++ b/myecommerce/templates/ecommerce/signup.html
@@ -11,7 +11,7 @@
             <div class="card-body p-5">
               <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-              <form>
+              <form action="{% url 'signup' %}" method="POST">
 
                 <div class="form-outline mb-4">
                   <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="d-flex justify-content-center">
-                    <a href="{% url 'home'%}"class="btn btn-warning">Register</a>
+                    <div class="btn btn-warning" type="submit">Register</div>
                 </div>
 
                 <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="{% url 'login'%}"
