--- a/myecommerce/templates/ecommerce/login.html
+++ b/myecommerce/templates/ecommerce/login.html
@@ -1,20 +1,24 @@
 {% extends 'ecommerce/main.html' %}
 {% load static %}
 {% block content %}
-<section class="vh-80 gradient-custom">
-    <div class="container py-5 h-80">
+<section class="vh-80 bg-image"
+style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+  <div class="mask d-flex align-items-center h-100 gradient-custom-3"> 
+    <div class="container h-80">
       <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white" style="border-radius: 1rem;">
-            <div class="card-body p-5 text-center">
+        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+          <div class="card" style="border-radius: 15px;">
+          <div class="card-body p-5">
+            <h2 class="text-uppercase text-left mb-5">Log In</h2>
+
               <form action="{% url 'login' %}" method="POST">
                 {% csrf_token %}
                 <div class="mb-md-5 mt-md-4 pb-5">
   
-                  <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                  <p class="text-white-50 mb-5">Please enter your login and password!</p>
+                  
+                  <p class="text-black-50 mb-5">Please enter your login and password!</p>
     
-                  <div class="form-outline form-white mb-4">
+                  <div class="form-outline form-black mb-4">
                     <input type="username" name="username" id="typeEmailX" class="form-control form-control-lg" />
                     <label class="form-label" for="typeEmailX">Username</label>
                   </div>
@@ -24,7 +28,7 @@
                     <label class="form-label" for="typePasswordX">Password</label>
                   </div>
     
-                  <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+                  <p class="small mb-5 pb-lg-2"><a class="text-black-50" href="#!">Forgot password?</a></p>
     
                   
                   <button type="submit" class="btn btn-warning">Login</button>
@@ -41,7 +45,7 @@
               
   
               <div>
-                <p class="mb-0">Don't have an account? <a href="{% url 'signup'%}" class="text-white-50 fw-bold">Sign Up</a>
+                <p class="mb-0">Don't have an account? <a href="{% url 'signup'%}" class="text-blacks-50 fw-bold">Sign Up</a>
                 </p>
               </div>
   
