--- a/myecommerce/templates/ecommerce/home.html
+++ b/myecommerce/templates/ecommerce/home.html
@@ -6,7 +6,7 @@
     <div class="container">
        
         <h1 class="Store-name">SHOPnSAVE</h1>
-        <p class="welcome-note">Discover a wide range of products to suit your needs.</p>
+        <p class="welcome-note"><b>Discover a wide range of products to suit your needs.</b></p>
         <a href="{% url 'store'%}" class="btn">Shop Now</a>
         
     </div>
@@ -14,7 +14,7 @@
   </section>
   
   <section class="category">
-    <h2>Product Category</h2>
+    <h2>PRODUCT CATEGORY</h2>
     <div class="item">
         <a href="{% url 'store'%}"><img src="{% static 'images/fashion.jpg' %}" alt="Category 1"></a>
         <a href="{% url 'store'%}"><p><b>Fashion</b></p></a>
@@ -25,7 +25,7 @@
     </div>
     <div class="item">
         <a href="{% url 'store'%}"><img src="{% static 'images/home appliances.jpg' %}" alt="Category 5"></a>
-        <a href="{% url 'store'%}"><p><b>Electrical Appliances</b></p></a>
+        <a href="{% url 'store'%}"><p><b>Home Appliances</b></p></a>
     </div>
     <div class="item">
         <a href="{% url 'store'%}"><img src="{% static 'images/food.jpg' %}" alt="Category 10"></a>
