--- a/myecommerce/templates/ecommerce/login.html
+++ b/myecommerce/templates/ecommerce/login.html
@@ -16,7 +16,7 @@ style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/
                 <div class="mb-md-5 mt-md-4 pb-5">
   
                   
-                  <p class="text-black-50 mb-5">Please enter your login and password!</p>
+                  <p class="text-black-50 mb-5">Please enter your login details!</p>
     
                   <div class="form-outline form-black mb-4">
                     <input type="username" name="username" id="typeEmailX" class="form-control form-control-lg" />
