--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -74,7 +74,7 @@ const csrftoken = getToken('csrftoken');
       {% if user.is_authenticated %}
       <p>hello {{user.username}} <a href="{% url 'logout' %}">Logout</a></p>
       {% else %}
-      <a href="{% url 'login'%}"class="btn btn-warning">Login</a>
+      <a href="{% url 'login'%}"class="btn btn-warning login-btn">Login</a>
       {% endif %}
      	
      	<a href="{% url 'cart' %}">
@@ -90,8 +90,7 @@ const csrftoken = getToken('csrftoken');
 
         <hr>
 
-         <div class="container">
-                <br>
+         <div class="">
                 {% block content %}
 
            
@@ -114,11 +113,11 @@ const csrftoken = getToken('csrftoken');
                 </div>
                 <div class="reachout">
                     <h2>Contact us</h2>
-                    <span><i class="fa fa-facebook-f"></i>@SHOP n SAVE</span>
-                    <span><i class="fa fa-twitter"></i> @SHOP n SAVE</span>
-                    <span><i class="fa fa-instagram"></i> @SHOP n SAVE</span>
-                    <span><i class="fa fa-pinterest-p"></i> @SHOP n SAVE</span>
-                    <span><i class="fa fa-youtube"></i> @SHOP n SAVE</span>
+                    <span><i class="fa fa-facebook-f"></i><small>@SHOP n SAVE</small></span>
+                    <span><i class="fa fa-twitter"></i> <small>@SHOP n SAVE</small></span>
+                    <span><i class="fa fa-instagram"></i><small>@SHOP n SAVE</small></span>
+                    <span><i class="fa fa-pinterest-p"></i><small>@SHOP n SAVE</small></span>
+                    <span><i class="fa fa-youtube"></i><small>@SHOP n SAVE</small></span>
                 </div>
                 </footer>
 
