--- a/myecommerce/templates/ecommerce/signup.html
+++ b/myecommerce/templates/ecommerce/signup.html
@@ -36,7 +36,7 @@
                 <div class="form-check d-flex justify-content-center mb-5">
                   <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
                   <label class="form-check-label" for="form2Example3g">
-                    I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
+                   <a href="#!" class="text-body"><br><u> I Agree to the Terms of service</u>  </a>
                   </label>
                 </div>
 
