--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,6 +59,5 @@ p{
     background: radial-gradient(#fff,#f9f1e4f3)
 }
 .body-liz {
-    background-color: rgba(36, 128, 0, 0.63);
-}
+    background-color:blue
 
