--- a/myecommerce/templates/ecommerce/login.html
+++ b/myecommerce/templates/ecommerce/login.html
@@ -31,7 +31,7 @@ style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/
                   <p class="small mb-5 pb-lg-2"><a class="text-black-50" href="#!">Forgot password?</a></p>
     
                   
-                  <button type="submit" class="btn btn-warning">Login</button>
+                  <button type="submit" class="btn btn-warning login-btn">Login</button>
   
     
                   <div class="d-flex justify-content-center text-center mt-4 pt-1">
