--- a/myecommerce/templates/ecommerce/home.html
+++ b/myecommerce/templates/ecommerce/home.html
@@ -5,8 +5,9 @@
 <section class="hero">
     <div class="container">
        
-        <h1 class="Store-name">SHOPnSAVE</h1>
-        <p class="welcome-note"><b>Discover a wide range of products to suit your needs.</b></p>
+        <h1 class="Store-name">SHOP AND SAVE</h1>
+        <p class="welcome-note"><b>Discover a wide range of products and services at an affordable price.         
+        </b></p>
         <a href="{% url 'store'%}" class="btn">Shop Now</a>
         
     </div>
@@ -29,8 +30,21 @@
     </div>
     <div class="item">
         <a href="{% url 'store'%}"><img src="{% static 'images/food.jpg' %}" alt="Category 10"></a>
-        <a href="{% url 'store'%}"><p><b>Foods</b></p></a>
+        <a href="{% url 'store'%}"><p><b>Foodstuffs</b></p></a>
     </div>
+        <div class="item">
+            <a href="{% url 'store'%}"><img src="{% static 'images/hair accessories.jpg' %}" alt="Category 1"></a>
+            <a href="{% url 'store'%}"><p><b>Hair Accessories</b></p></a>
+            </div>
+            <div class="item">
+                <a href="{% url 'store'%}"><img src="{% static 'images/personal care.jpg' %}" alt="Category 1"></a>
+                <a href="{% url 'store'%}"><p><b>Personal Care</b></p></a>
+                </div>
+                <div class="item">
+                    <a href="{% url 'store'%}"><img src="{% static 'images/computers.jpg' %}" alt="Category 1"></a>
+                    <a href="{% url 'store'%}"><p><b>Computers</b></p></a>
+                    </div>
+                    
         <div class="item">
         <a href="{% url 'store'%}"><img src="{% static 'images/others.jpg' %}" alt="Category 6"></a>
         <a href="{% url 'store'%}"><p><b>Others</b></p></a>
