--- a/myecommerce/templates/ecommerce/login.html
+++ b/myecommerce/templates/ecommerce/login.html
@@ -9,13 +9,11 @@ style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
           <div class="card" style="border-radius: 15px;">
           <div class="card-body p-5">
-            <h2 class="text-uppercase text-left mb-5">Log In</h2>
+            <h2 class="text-uppercase text-left mb-5">Login</h2>
 
               <form action="{% url 'login' %}" method="POST">
                 {% csrf_token %}
                 <div class="mb-md-5 mt-md-4 pb-5">
-  
-                  
                   <p class="text-black-50 mb-5">Please enter your login details!</p>
     
                   <div class="form-outline form-black mb-4">
@@ -35,9 +33,11 @@ style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/
   
     
                   <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                    <a href="#!" class="text-white"><i class="fa fa-facebook-f fa-lg"></i></a>
-                    <a href="#!" class="text-white"><i class="fa fa-twitter fa-lg mx-4 px-2"></i></a>
-                    <a href="#!" class="text-white"><i class="fa fa-google fa-lg"></i></a>
+                    <a href="#!" class="text-black"><i class="fa fa-facebook-f fa-lg"></i></a>
+                    <a href="#!" class="text-black"><i class="fa fa-twitter fa-lg mx-4 px-2"></i></a>
+                    <a href="#!" class="text-black"><i class="fa fa-instagram fa-lg"></i></a>
+                    <a href="#!" class="text-black"><i class="fa fa-youtube fa-lg mx-4 px-2"></i></a>
+                    
                   </div>
     
                 </div>
