--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -4,7 +4,7 @@
 {% load static %}
 <html>
 <head>
-	<title>SHOP n SAVE</title>
+	<title>EDUUKA</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
@@ -46,7 +46,7 @@ const csrftoken = getToken('csrftoken');
   <script type = "text/javascript" src="{% static 'js/cart.js'%}"></script>
   
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'home' %}">SHOP n SAVE</a>
+  <a class="navbar-brand" href="{% url 'home' %}"><B>EDUUKA</B></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -98,7 +98,7 @@ const csrftoken = getToken('csrftoken');
                 <script src="{% static 'js/cart.js' %}"></script>
                 <footer>
                   <div class="contacts">
-                    <h1>SHOP n SAVE</h1>
+                    <h1>EDUUKA</h1>
                     <span><strong>Address: </strong>Makerere Hill</span>
                     <span><strong>Phone Number: </strong>+256 783937394</span>
                     <span><strong>Hours: </strong>24hours - 7 days</span>
@@ -113,11 +113,11 @@ const csrftoken = getToken('csrftoken');
                 </div>
                 <div class="reachout">
                     <h2>Contact us</h2>
-                    <span><i class="fa fa-facebook-f"></i><small>@SHOP n SAVE</small></span>
-                    <span><i class="fa fa-twitter"></i> <small>@SHOP n SAVE</small></span>
-                    <span><i class="fa fa-instagram"></i><small>@SHOP n SAVE</small></span>
-                    <span><i class="fa fa-pinterest-p"></i><small>@SHOP n SAVE</small></span>
-                    <span><i class="fa fa-youtube"></i><small>@SHOP n SAVE</small></span>
+                    <span><i class="fa fa-facebook-f"></i><small>@Eduuka</small></span>
+                    <span><i class="fa fa-twitter"></i> <small>@eduuka012</small></span>
+                    <span><i class="fa fa-instagram"></i><small>@_eduuka01</small></span>
+                    <span><i class="fa fa-pinterest-p"></i><small>@Eduuka012</small></span>
+                    <span><i class="fa fa-youtube"></i><small>@Eduuka</small></span>
                 </div>
                 </footer>
 
