--- a/myecommerce/templates/ecommerce/signup.html
+++ b/myecommerce/templates/ecommerce/signup.html
@@ -9,40 +9,42 @@
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
           <div class="card" style="border-radius: 15px;">
             <div class="card-body p-5">
-              <h2 class="text-uppercase text-left mb-5">Create an account</h2>
+              <h2 class="text-uppercase text-left mb-5">CREATE AN ACCOUNT</h2>
 
               <form action="{% url 'signup' %}" method="POST">
 
                 <div class="form-outline mb-4">
                   <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example1cg">Your Name</label>
-                </div>
+                  <label class="form-label" for="form3Example1cg" style="font-weight: bold; color: black;">YOUR NAME</label>
+              </div>
+              
 
                 <div class="form-outline mb-4">
                   <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example3cg">Your Email</label>
+                  <label class="form-label" for="form3Example3cg">YOUR EMAIL</label>
                 </div>
 
                 <div class="form-outline mb-4">
                   <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cg">Password</label>
+                  <label class="form-label" for="form3Example4cg">PASSWORD</label>
                 </div>
 
                 <div class="form-outline mb-4">
                   <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cdg">Repeat your password</label>
+                  <label class="form-label" for="form3Example4cdg">REPEAT YOUR PASSWORD</label>
                 </div>
 
                 <div class="form-check d-flex align-items-center justify-content-left mb-5">
                   <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
                   <label class="form-check-label" for="form2Example3g">
-                   <a href="#!" class="text-body"><u> I Agree to the Terms and Conditions</u>  </a>
+                   <a href="#!" class="text-body"><u> I AGREE TO THE TERMS AND CONDITIONS</u>  </a>
                   </label>
                 </div>
 
                 <div class="d-flex justify-content-left">
-                    <div class="btn btn-warning register-btn" type="submit">Register</div>
-                </div>
+                  <button class="btn btn-warning register-btn" type="submit">REGISTER</button>
+              </div>
+              
                 <div class="d-flex justify-content-center text-center mt-4 pt-1">
                   <a href="#!" class="text-black"><i class="fa fa-facebook-f fa-lg"></i></a>
                   <a href="#!" class="text-black"><i class="fa fa-twitter fa-lg mx-4 px-2"></i></a>
