made changes to store.html

--- a/myecommerce/templates/ecommerce/signup.html
+++ b/myecommerce/templates/ecommerce/signup.html
@@ -15,34 +15,33 @@
 
                 <div class="form-outline mb-4">
                   <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example1cg" style="font-weight: bold; color: black;">YOUR NAME</label>
-              </div>
+                  <label class="form-label" for="form3Example1cg">Your name</label>
               
 
                 <div class="form-outline mb-4">
                   <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example3cg">YOUR EMAIL</label>
+                  <label class="form-label" for="form3Example3cg">Your email</label>
                 </div>
 
                 <div class="form-outline mb-4">
                   <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cg">PASSWORD</label>
+                  <label class="form-label" for="form3Example4cg">Password</label>
                 </div>
 
                 <div class="form-outline mb-4">
                   <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cdg">REPEAT YOUR PASSWORD</label>
+                  <label class="form-label" for="form3Example4cdg">Repeat your password</label>
                 </div>
 
                 <div class="form-check d-flex align-items-center justify-content-left mb-5">
                   <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
                   <label class="form-check-label" for="form2Example3g">
-                   <a href="#!" class="text-body"><u> I AGREE TO THE TERMS AND CONDITIONS</u>  </a>
+                   <a href="#!" class="text-body"><u> I Agree To The Terms And Conditions</u>  </a>
                   </label>
                 </div>
 
                 <div class="d-flex justify-content-left">
-                  <button class="btn btn-warning register-btn" type="submit">REGISTER</button>
+                  <button class="btn btn-warning register-btn" type="submit">Register</button>
               </div>
               
                 <div class="d-flex justify-content-center text-center mt-4 pt-1">
