--- a/myecommerce/templates/ecommerce/store.html
+++ b/myecommerce/templates/ecommerce/store.html
@@ -13,7 +13,9 @@
 				<a data-product="{{product.id}}" data-action = "add" name="update-cart" class="btn btn-outline-success add-btn update-cart" href="#">Add to Cart</a>
 		        
 		        <a class="btn btn-outline-success" href="#">View</a>
-		        <h4 style="display: inline-block; float:right;"><strong>${{product.price|floatformat}}</strong></h4>
+		        
+				<h4 style="float: right;"><strong>${{product.price|floatformat}}</strong></h4>
+
 
 	    </div>
     </div>
