--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -113,6 +113,7 @@ const csrftoken = getToken('csrftoken');
                 </div>
                 <div class="reachout">
                     <h2>Contact us</h2>
+                    <a href="mailto:abdulssekyanzi@gmail.com" class="email-link">Email Us</a>
                     <span><i class="fa fa-facebook-f"></i><small>@Eduuka</small></span>
                     <span><i class="fa fa-twitter"></i> <small>@eduuka012</small></span>
                     <span><i class="fa fa-instagram"></i><small>@_eduuka01</small></span>
