i have added a link to  bussiness number

--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -100,7 +100,8 @@ const csrftoken = getToken('csrftoken');
                   <div class="contacts">
                     <h1>EDUUKA</h1>
                     <span><strong>Address: </strong>Makerere Hill</span>
-                    <span><strong>Phone Number: </strong>+256 783937394</span>
+                    <span><strong>Phone Number: </strong><a href=+256 783937394>Call Us</a></span>
+                    
                     <span><strong>Hours: </strong>24hours - 7 days</span>
                 </div>
                 <div class="about">
