i have added a link that takes you to top

--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -101,7 +101,7 @@ const csrftoken = getToken('csrftoken');
                 <script src="{% static 'js/cart.js' %}"></script>
                 <footer>
                   <div class="contacts">
-                    <h1>EDUUKA</h1>
+                    <h1><a href="#top">EDUUKA</a></h1>
                     <span><strong>Address: </strong>Makerere Hill</span>
                     <span><strong>Phone Number: </strong><a href=+256 783937394>Call Us</a></span>
                     
