--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -103,7 +103,7 @@ const csrftoken = getToken('csrftoken');
                   <div class="contacts">
                     <h1><a href="#top">EDUUKA</a></h1>
                     <span><strong>Address: </strong>Makerere Hill</span>
-                    <span><strong>Phone Number: </strong><a href=+256 783937394>Call Us</a></span>
+                    <span><strong>Phone Number: </strong><a href=+256 783937394><i class="fa fa-phone-square" aria-hidden="true"></i>Call Us</a></span>
                     
                     <span><strong>Hours: </strong>24hours - 7 days</span>
                 </div>
