i have crreate a url to terms and conditions

--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -109,7 +109,7 @@ const csrftoken = getToken('csrftoken');
                 </div>
                 <div class="about">
                     <h2>About</h2>
-                    <span>Terms and Conditions</span>
+                    <span><a href="{% url 'terms_and_conditions' %}">Terms and Conditions</a></span>
                     <span>Offers</span>
                     <span>Contact Us</span>
                     <span><a href="abdulssekyanzi@gmail.com">Report a Bug</a></span>
